<resources>
    <string name="app_name">ALCOCALC</string>
    <string name="welcome">Welcome!</string>
    <string name="start">start</string>
    <string name="about">about</string>
    <string name="what_is_this_app_about">What is this app about?</string>
    <string name="textAbout">blah blah course work we are great thisapp is great we did it blah blha for oop it calculates bac uses some formula hmmm</string>
    <string name="back">back</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="calculate">calculate</string>
    <string name="click_calculate_to_calculate_bac">Click CALCULATE to calculate BAC</string>
    <string name="g_ethanol_100ml_bodywater">g Ethanol / 100mL bodyWater</string>
    <string name="be_safe_the_legal_limit_is_0_08">Be Safe, The Legal Limit is 0.08%</string>
    <string name="please_enter_your_parameters">Please enter your parameters.</string>
    <string name="live_bac_estimation">Live BAC Estimation</string>
    <string name="set_to_imperial">Set to imperial</string>
    <string name="weight">Weight</string>
    <string name="kilograms">Kilograms</string>
    <string name="bac_estimation">BAC estimation</string>
    <string name="set_to_metric">Set to Metric</string>
    <string name="pounds">Pounds</string>
    <string name="name">name</string>
    <string name="ml">ml</string>
    <string name="body_type">Body Type</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="plump">plump</string>
    <string name="slim">slim</string>
    <string name="enter_a_name">Enter a name.</string>
    <string name="edit_drink">Edit drink</string>
    <string name="add_a_drink">add a drink</string>
    <string name="empty_fields">empty fields</string>
    <string name="fill_the_fields">Please fill all the fields.</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
</resources>
