<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textAboutHeader"
        android:text="@string/what_is_this_app_about"
        android:layout_gravity="center"
        style="@style/TextHeader"
        />
    <TextView
        android:id="@+id/textAbout"
        android:text="@string/textAbout"
        style="@style/TextNormal"
        android:layout_weight="6"
        />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
</LinearLayout>