<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.bactrack.Settings">


    <EditText
        android:id="@+id/userWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/params"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/BodyType"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_above="@+id/submit"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonNeg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioButtonNeg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="38dp"
        android:nestedScrollingEnabled="true"
        android:text="@string/save" />

    <TextView
        android:id="@+id/weightType"
        style="@style/TextNormal"
        android:layout_below="@+id/userWeight"
        android:layout_centerHorizontal="true"
        android:text="@string/kilograms" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="168dp"
        android:layout_above="@+id/BodyType"
        android:layout_below="@+id/changeWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_gravity="end|center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/BodyType"
        android:layout_centerHorizontal="true"
        android:text="@string/body_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/params"
        style="@style/TextHeader"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/please_enter_your_parameters" />

    <Button
        android:id="@+id/changeWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightType"
        android:layout_centerHorizontal="true"
        android:text="@string/set_to_imperial" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/BodyType"
        android:text="@string/slim"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/BodyType"
        android:text="@string/plump"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</RelativeLayout>
